# fastLowess

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benchmarks/: INTERPRETATION.md  compare_benchmark.py  compare_cpu_gpu.py  convert_criterion.py  convert_criterion_gpu.py
benchmarks/fastLowess/: Cargo.toml
benchmarks/fastLowess/benches/: benchmark.rs  benchmark_gpu.rs  crossover.rs
benchmarks/output/: rust_benchmark.json  rust_benchmark_cpu.json  rust_benchmark_cpu_serial.json  rust_benchmark_gpu.json  statsmodels_benchmark.json
examples/: batch_smoothing.rs  online_smoothing.rs  streaming_smoothing.rs
src/: api.rs  input.rs  lib.rs
src/adapters/: batch.rs  online.rs  streaming.rs
src/engine/: executor.rs  gpu.rs
src/evaluation/: cv.rs  intervals.rs  mod.rs
tests/: integration_tests.rs  parallel_eval_tests.rs  parallel_interval_tests.rs  smooth_pass_consistency.rs
validation/: INTERPRETATION.md  compare_validation.py
validation/fastLowess/: Cargo.toml
validation/fastLowess/src/: validate.rs
validation/output/: rust_validate.json  statsmodels_validate.json
validation/output/fastLowess/: 01_tiny_linear.json  02_sine_standard.json  03_sine_robust.json  05_high_smoothness.json  06_low_smoothness.json  07_constant.json  08_step_func.json  09_end_effects_left.json  13_iter_2.json  15_zero_variance.json
validation/output/lowess/: 04_large_scale.json  10_end_effects_right.json  11_sparse_data.json  12_dense_data.json  (+1 more)
validation/statsmodels/: validate.py
