[package]
name = "fastLowess-validation"
version = "0.4.0"
edition = "2024"
publish = false

[[bin]]
name = "validate"
path = "src/validate.rs"

[dependencies]
fastLowess = { git = "https://github.com/thisisamirv/fastLowess", branch = "develop" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
